<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <TextView
        android:id="@+id/textView"
        android:layout_width="73dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="117dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:text="@string/l1"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/user_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="92dp"
        android:layout_height="42dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:text="@string/l2"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="105dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:ems="10"
        android:hint="@string/h1"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:ems="10"
        android:hint="@string/h2"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/user_name" />

    <Button
        android:id="@+id/selectAll_btn"
        android:layout_width="177dp"
        android:layout_height="48dp"
        android:layout_marginStart="88dp"
        android:layout_marginLeft="88dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="146dp"
        android:layout_marginRight="146dp"
        android:text="@string/b1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/add_btn"
        android:layout_width="117dp"
        android:layout_height="57dp"
        android:layout_marginStart="38dp"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:text="@string/b2"
        app:layout_constraintEnd_toStartOf="@+id/signIn_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectAll_btn" />

    <Button
        android:id="@+id/signIn_btn"
        android:layout_width="111dp"
        android:layout_height="52dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="93dp"
        android:layout_marginRight="93dp"
        android:text="@string/b3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add_btn"
        app:layout_constraintTop_toBottomOf="@+id/selectAll_btn" />

    <Button
        android:id="@+id/delete_btn"
        android:layout_width="117dp"
        android:layout_height="53dp"
        android:layout_marginStart="38dp"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:text="@string/b4"
        app:layout_constraintEnd_toStartOf="@+id/update_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_btn" />

    <Button
        android:id="@+id/update_btn"
        android:layout_width="111dp"
        android:layout_height="53dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="93dp"
        android:layout_marginRight="93dp"
        android:text="@string/b5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/delete_btn"
        app:layout_constraintTop_toBottomOf="@+id/signIn_btn" />



</androidx.constraintlayout.widget.ConstraintLayout>